@@ -1,4 +1,5 @@
 0.16
+ - Add form atribute processing to Button.
 
 0.15 2024-05-31T14:14:26+02:00
  - Fix error mesaage for A.
